# minesweeper-prover9

./: .gitignore  LICENSE  README.md  index.html  package.json  readme.tex  tsconfig.json  vite.config.ts
src/: App.vue  components.d.ts
src-tauri/: Cargo.toml  minesweeper.in  minesweeper.out  minesweeper.out.example  tauri.conf.json
src-tauri/src/: Minesweeper.rs  main.rs
src/components/: Footer.vue
src/components/Minesweeper/: Board.vue  Cell.vue  Config.vue  Game.vue  helper.ts  logic.ts
src/components/smarticons/: DigitIcon.vue
src/components/smartui/: GuardedButton.vue  GuardedInput.vue  button-styles.ts
src/components/ui/: AltButton.vue  AltInput.vue  BaseButton.vue  BaseInput.vue  DangerButton.vue  DangerInput.vue  PrimaryButton.vue  PrimaryInput.vue  SecondaryButton.vue  SuccessButton.vue  SuccessInput.vue  WarnButton.vue  WarnInput.vue
src/layouts/: 404.vue  default.vue
src/pages/: [...all].vue  about.md  index.vue
src/stores/: game.ts
